# catceo_coin

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
chat/: consumers.py  models.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/: index.html
common/: models.py
config/: asgi.py  settings.py  urls.py
static/css/: container.css  wave.css
