[tool.poetry]
name = "003"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.8"
requests = "^2.32.3"
pytz = "^2024.1"
channels = "^4.1.0"
gunicorn = "^22.0.0"
channels-redis = "^4.2.0"
djangorestframework = "^3.15.2"
daphne = "^4.1.2"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
